auto revamp for algae autos